<resources>
    <string name="app_name">Farmer Assistant</string>
    <string name="to">To</string>
    <string name="creditedTo">Credited to</string>
    <string name="debitedTo">Debited to</string>
    <string name="transact">Transact</string>
    <string name="dateOfTrans">Date</string>
    <string name="from">From</string>
    <string name="comment">Unit</string>
    <string name="analysis">Analysis</string>
    <string name="addSalary">Request Labour</string>
    <string name="setting">Settings</string>
    <string name="tList">Transactions List</string>
    <string name="amount">Quantity</string>
    <string name="title_activity_app_settings1">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_app_settings">Settings</string>
    <string name="title_activity_add_category">Add Commodity</string>
    <string name="category_name">Commodity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_analysis">Balance Sheet</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="exportTransactions">Export Transactions</string>
    <string name="list_category">List Category</string>
    <string name="title_activity_list_category">List Category</string>
    <string name="title_activity_export_transactions">ExportTransactions</string>
    <string name="title_activity_request_labour">RequestLabour</string>
    <string name="title_activity_main0">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity__login">Activity_Login</string>
</resources>
