<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/toText"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/to"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromText"
        tools:text="@string/to" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/from"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/from" />

    <Spinner
        android:id="@+id/toDropdown"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/toText"
        app:layout_constraintTop_toBottomOf="@+id/fromDropdown" />

    <Spinner
        android:id="@+id/fromDropdown"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/fromText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/comment"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine|textPersonName"
        android:singleLine="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <EditText
        android:id="@+id/transDate"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/dateOfTrans"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/dateOfTrans"
        android:inputType="date"
        android:onClick="showDatePickerDialog"
        app:layout_constraintStart_toEndOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/toDropdown" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/transact"
        android:onClick="addTransaction"
        android:text="@string/transact"
        app:layout_constraintStart_toEndOf="@+id/comment"
        app:layout_constraintTop_toBottomOf="@+id/transDate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:onClick="goToAnalysis"
        android:text="@string/analysis"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="20dp"
        android:onClick="goToTransactions"
        android:text="@string/tList"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="75dp"
        android:onClick="goToSettings"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="75dp"
        android:onClick="goToWebBot"
        android:text="Farm Assistant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints="0"
        android:hint="@string/amount"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:text="An App to enable farmers to sell their commodities and assist them in need."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
